[gd_scene load_steps=25 format=3 uid="uid://c5b8wa7kknj3k"]

[ext_resource type="Script" uid="uid://ba4h7p5wwvjjp" path="res://AngelPlayer/lumber.gd" id="1_0u7ud"]
[ext_resource type="Shader" uid="uid://ctrribycrblwy" path="res://Both/Shaders/flash.gdshader" id="2_cyod2"]
[ext_resource type="Script" uid="uid://bysi54m4b6lmm" path="res://AngelPlayer/idle.gd" id="3_2di42"]
[ext_resource type="Script" uid="uid://wvyjj1cwm6rh" path="res://StateMachine/state_machine.gd" id="3_i0uop"]
[ext_resource type="Texture2D" uid="uid://ceflo7isqanpf" path="res://Heaven/Chars/lumber04.png" id="3_lte0i"]
[ext_resource type="Script" uid="uid://buwssrk45jqis" path="res://AngelPlayer/running.gd" id="4_agx24"]
[ext_resource type="Texture2D" uid="uid://c5h4aq8dw4vx5" path="res://AngelPlayer/respawn.png" id="4_onvq3"]
[ext_resource type="Script" uid="uid://cc813n7unnd2p" path="res://AngelPlayer/jumping.gd" id="5_wnbuf"]
[ext_resource type="Script" uid="uid://daf3yj47cg6kd" path="res://AngelPlayer/falling.gd" id="6_sys07"]
[ext_resource type="Script" uid="uid://cvi0ieawhof4n" path="res://AngelPlayer/dashing.gd" id="8_q0ewp"]
[ext_resource type="Script" uid="uid://utxg2gqvpk42" path="res://AngelPlayer/hurt.gd" id="10_cyod2"]
[ext_resource type="Script" uid="uid://bqibxgaskwjoe" path="res://AngelPlayer/respawning.gd" id="12_bkse3"]

[sub_resource type="Animation" id="Animation_nlkj3"]
resource_name = "Dash"
length = 0.24
step = 0.03
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.030303, 0.0606061, 0.0909091, 0.151515, 0.181818, 0.212121),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29, 30]
}

[sub_resource type="Animation" id="Animation_bxpf4"]
resource_name = "Fall"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [17, 18]
}

[sub_resource type="Animation" id="Animation_phfjy"]
resource_name = "Idle"
length = 0.3
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_6xycc"]
resource_name = "Jump"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 16]
}

[sub_resource type="Animation" id="Animation_1uw5g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Respawn:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Respawn:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_bkse3"]
resource_name = "Respawn"
length = 0.7
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Respawn:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.01, 0.05, 0.09, 0.13, 0.17, 0.21, 0.25, 0.29, 0.33, 0.37, 0.41, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Respawn:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.44, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.419394, 0.449697, 0.48, 0.510303, 0.570909, 0.599697, 0.63, 0.66),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 24, 25, 26, 27, 28, 29, 30, 16]
}

[sub_resource type="Animation" id="Animation_eyhxb"]
resource_name = "Run"
length = 0.7
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 8, 0, 10, 11, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l5nyu"]
_data = {
&"Dash": SubResource("Animation_nlkj3"),
&"Fall": SubResource("Animation_bxpf4"),
&"Idle": SubResource("Animation_phfjy"),
&"Jump": SubResource("Animation_6xycc"),
&"RESET": SubResource("Animation_1uw5g"),
&"Respawn": SubResource("Animation_bkse3"),
&"Run": SubResource("Animation_eyhxb")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_onvq3"]
shader = ExtResource("2_cyod2")

[sub_resource type="AtlasTexture" id="AtlasTexture_s6xto"]
atlas = ExtResource("3_lte0i")
region = Rect2(0, 0, 0, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ax1kc"]
size = Vector2(16, 36)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_slkpi"]
size = Vector2(24, 68)

[node name="Lumber" type="CharacterBody2D"]
z_index = 1
collision_layer = 131
collision_mask = 7
script = ExtResource("1_0u7ud")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_l5nyu")
}

[node name="RespawnBaackground" type="Sprite2D" parent="."]
position = Vector2(0, 8)
scale = Vector2(4, 4)

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_onvq3")
instance_shader_parameters/flash_opacity = 0.0
scale = Vector2(4, 4)
texture = SubResource("AtlasTexture_s6xto")
hframes = 8
vframes = 5
frame = 1

[node name="Respawn" type="Sprite2D" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
position = Vector2(0, 8)
scale = Vector2(4, 4)
texture = ExtResource("4_onvq3")
hframes = 5
vframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_ax1kc")
debug_color = Color(0.884491, 0.240838, 0.584226, 0.247059)

[node name="Timers" type="Node" parent="."]

[node name="JumpHighTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
wait_time = 0.08
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
wait_time = 0.1
one_shot = true

[node name="JumpBufferWaitTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
wait_time = 0.02
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
wait_time = 0.05
one_shot = true

[node name="DashFinishTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
wait_time = 0.24
one_shot = true

[node name="DashFallImpulseTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
wait_time = 0.4
one_shot = true

[node name="HurtTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
wait_time = 0.5
one_shot = true

[node name="RespawnTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
wait_time = 0.8
one_shot = true

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_i0uop")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("3_2di42")

[node name="Running" type="Node" parent="StateMachine"]
script = ExtResource("4_agx24")

[node name="Jumping" type="Node" parent="StateMachine"]
script = ExtResource("5_wnbuf")

[node name="Falling" type="Node" parent="StateMachine"]
script = ExtResource("6_sys07")

[node name="Dashing" type="Node" parent="StateMachine"]
script = ExtResource("8_q0ewp")

[node name="Hurt" type="Node" parent="StateMachine"]
unique_name_in_owner = true
script = ExtResource("10_cyod2")

[node name="Respawning" type="Node" parent="StateMachine"]
script = ExtResource("12_bkse3")

[node name="HeavenCamera" type="Camera2D" parent="."]
position = Vector2(0, -30)
process_callback = 0
position_smoothing_enabled = true
position_smoothing_speed = 2.0
editor_draw_drag_margin = true

[node name="StateLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
z_index = 100
offset_left = -121.0
offset_top = -110.0
offset_right = 173.0
offset_bottom = -38.0
theme_override_font_sizes/font_size = 52
text = "null"

[node name="VelYLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
offset_left = -141.0
offset_top = -202.0
offset_right = 18.0
offset_bottom = -144.0
theme_override_font_sizes/font_size = 42
text = "Velocity"

[node name="VelXLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
offset_left = -136.0
offset_top = -146.0
offset_right = 23.0
offset_bottom = -88.0
theme_override_font_sizes/font_size = 47
text = "Velocity"

[node name="DashLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
offset_left = -140.0
offset_top = -243.0
offset_right = -14.0
offset_bottom = -182.0
theme_override_font_sizes/font_size = 30
text = "dash"

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 10)
shape = SubResource("RectangleShape2D_slkpi")

[connection signal="timeout" from="Timers/JumpHighTimer" to="StateMachine/Jumping" method="_on_jump_high_timer_timeout"]
[connection signal="timeout" from="Timers/JumpBufferTimer" to="StateMachine/Falling" method="_on_jump_buffer_timer_timeout"]
[connection signal="timeout" from="Timers/JumpBufferWaitTimer" to="StateMachine/Idle" method="_on_jump_buffer_wait_timer_timeout"]
[connection signal="timeout" from="Timers/JumpBufferWaitTimer" to="StateMachine/Running" method="_on_jump_buffer_wait_timer_timeout"]
[connection signal="timeout" from="Timers/CoyoteTimer" to="StateMachine/Falling" method="_on_coyote_timer_timeout"]
[connection signal="timeout" from="Timers/DashFinishTimer" to="StateMachine/Dashing" method="_on_dash_finish_timer_timeout"]
[connection signal="timeout" from="Timers/DashFallImpulseTimer" to="StateMachine/Falling" method="_on_dash_fall_impulse_timeout"]
[connection signal="timeout" from="Timers/HurtTimer" to="StateMachine/Hurt" method="_on_hurt_timer_timeout"]
[connection signal="timeout" from="Timers/RespawnTimer" to="StateMachine/Respawning" method="_on_respawn_timer_timeout"]
